# pocket-tts-mlx

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
pocket_tts_mlx/: __init__.py  __main__.py  default_parameters.py  main.py
pocket_tts_mlx/conditioners/: __init__.py  base.py  text.py
pocket_tts_mlx/data/: __init__.py  audio.py  audio_utils.py
pocket_tts_mlx/models/: __init__.py  flow_lm.py  mimi.py  tts_model.py
pocket_tts_mlx/modules/: __init__.py  attention.py  conv.py  dummy_quantizer.py  layer_scale.py  mimi_transformer.py  mlp.py  resample.py  rope.py  seanet.py  stateful_module.py  transformer.py
pocket_tts_mlx/utils/: __init__.py  config.py  utils.py  weight_conversion.py
