[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-tts-mlx"
version = "0.2.0"
description = "MLX backend for pocket-tts with Apple Silicon optimization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "jishnuvenugopal"}]
keywords = ["tts", "text-to-speech", "mlx", "apple-silicon", "voice-cloning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "mlx>=0.20.0",
    "numpy",
    "safetensors",
    "sentencepiece>=0.2.1",
    "pydantic>=2",
    "pyyaml>=6.0",
    "requests>=2.20.0",
    "huggingface_hub>=0.10",
    "scipy>=1.5.0",
    "soundfile>=0.12.0",
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    "torch>=2.5.0",
    "pocket-tts>=1.0.3",
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]

[project.urls]
Homepage = "https://github.com/jishnuvenugopal/pocket-tts-mlx"
Repository = "https://github.com/jishnuvenugopal/pocket-tts-mlx"
Issues = "https://github.com/jishnuvenugopal/pocket-tts-mlx/issues"

[project.scripts]
pocket-tts-mlx = "pocket_tts_mlx.main:main"

[tool.setuptools.packages.find]
include = ["pocket_tts_mlx*"]

[tool.setuptools.package-data]
pocket_tts_mlx = ["config/*.yaml", "config/*.yml", "*.yaml", "*.yml"]
